@@ -17,6 +17,7 @@
   * Do not depend on ActiveModel::Dirty
   * Manual sign_in now triggers remember token
   * Be sure to halt strategies on failures
+  * Consider SCRIPT_NAME on Omniauth paths
 
 * deprecations
   * Deprecated anybody_signed_in? in favor of signed_in? (by github.com/gavinhughes)
